# task_manager

./: .gitignore  README.md
deploy/: README.md  docker-compose.yaml
nginx/: README.md  (+1 more)
web_application/backend/microservices/task_service/: .env  Cargo.toml  README.md  alembic.ini  pytest.ini  requirements.txt
web_application/backend/microservices/task_service/app/: config.py  main.py
web_application/backend/microservices/task_service/app/db/: db.py
web_application/backend/microservices/task_service/app/task/: model.py  schema.py
web_application/backend/microservices/task_service/app/template/: model.py  shema.py
web_application/backend/microservices/task_service/app/utils/: dependencies.py  unitofwork.py  users.py
web_application/backend/microservices/task_service/config/: base.yaml  local.yaml  production.yaml
web_application/backend/microservices/task_service/config/redis/: redis.conf
web_application/backend/microservices/task_service/docker/: Dockerfile  docker-compose.yaml
web_application/backend/microservices/task_service/migrations/: env.py
web_application/backend/microservices/task_service/migrations/versions/: 2024-03-15_add_index.py  2024-04-28_init.py  3227658ec714_.py  9a88c2b81d82_fix_timezone.py  f3a6993173d3_split_table_into_notification_task_.py
web_application/backend/microservices/task_service/src/: lib.rs  main.rs
web_application/backend/microservices/task_service/src/domain/: mod.rs
web_application/backend/microservices/task_service/src/infra/: mod.rs
web_application/backend/microservices/task_service/src/interface/: mod.rs
web_application/backend/microservices/task_service/src/usecase/: mod.rs
(+145 files in other folders)
