[package]
name = "task_service"
version = "0.1.0"
edition = "2021"
authors = [
    "Ivenin Valentin <iveninvala7@gmail.com>",
]

[lib]
# generate lib for tests and reusing the code
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "task_service"

[dependencies]
# web fraimworks for creating http connections
actix-web = "4.4.1"
actix-http = "3.0.4"

# work with futures
tokio = "1.35.1"

# serializer, desirializercargo run
serde = { version = "1.0.196", features = ["derive"] }
serde-aux = "4.4.0"

# config files
config = "0.11.0"

# generate UUID
uuid = { version = "1.7.0", features = ["v4"] }

# data and time
chrono = "0.4.15"

# validate
unicode-segmentation = "1.11.0"
validator = "0.16.1"

# logger
log = "0.4.1"
tracing = { version = "0.1.40", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.9"

[dependencies.sqlx]
# database query
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
# testing web-app
actix-rt = "2.9.0"

# sending requests in web-app
reqwest = "0.11.23"

# once cell for futures
once_cell = "1.19.0"

# assert
claim = "0.5.0"

# generate fake email and other
fake = "2.9.0"

# property-base testing
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

# generate random
rand = "0.8.2"
